<resources>
    <string name="app_name">Cep Application</string>
    <string name="toolbar_title">Busca CEP</string>
    <string name="text_main">CEP</string>
    <string name="hint_text">Digite o CEP</string>
    <string name="btn_text">Consultar e salvar</string>
    <string name="saved_address_title">CEPs consultados</string>
    <string name="last_address_title">Último CEP consultado</string>
    <string name="stored_zip_codes_button">CEPs armazenados</string>
    <string name="stored_zip_codes_title">CEPs armazenados</string>
    <string name="no_stored_zip_codes">Nenhum CEP armazenado.</string>
    <string name="cep_salvo_text">CEP: %1$s</string>
    <string name="street_text">Logradouro: %1$s</string>
    <string name="complement_text">Complemento: %1$s</string>
    <string name="neighborhood_text">Bairro: %1$s</string>
    <string name="city_text">Localidade: %1$s</string>
    <string name="state_abbreviation_text">UF: %1$s</string>
    <string name="state_text">Estado: %1$s</string>
    <string name="not_informed">Não informado</string>
    <string name="error_invalid_zip_code">Digite um CEP válido</string>
    <string name="error_zip_code_not_found">CEP não encontrado</string>
    <string name="error_network">Não foi possível consultar o CEP. Verifique sua conexão e tente novamente.</string>
    <string name="error_unexpected">Não foi possível concluir a consulta. Tente novamente.</string>
    <string name="toast_zip_code_saved">Endereço disponível.</string>


</resources>
